docs/yar_bnf.txt
<expr> ::=
    <alternation-expr>

<alternation-expr> ::=
    <concatenation-expr>                        |
    <alternation-expr>'|'<concatenation-expr>   |

<concatenation-expr> ::=
    <quantifier-expr>                        |
    <concatenation-expr><quantifier-expr>    |

<quantifier-expr> ::= 
    <grouping-expr>          |
    <grouping-expr>'*'       |
    <grouping-expr>'+'       |
    <grouping-expr>'?'       | 
    <grouping-expr>"{%d}"    |
    <grouping-expr>"{%d,}"   |
    <grouping-expr>"{%d,%d}" |

<grouping-expr> ::=
    <terminal>      |
    '('<expr>')'    |

<terminal> ::= 
    "Symbol"        |
    "[%c-%c]"       |
    "\d"            |
    "\D"            |
    "\s"            |
    "\S"            |
    '.'
